hphp/hack/test/ifc/check/inheritance.php.exp
File "inheritance.php", line 20, characters 1-63:
Data with policy P3 appears in context P2. (Typing[4379])
File "inheritance.php", line 20, characters 1-63:
Data with policy P3 appears in context P1. (Typing[4379])
